<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/white_button"
    android:layout_marginEnd="@dimen/base_padding"
    android:layout_marginRight="@dimen/base_padding"
    android:layout_marginStart="@dimen/base_padding"
    android:layout_marginLeft="@dimen/base_padding"
    android:layout_marginTop="@dimen/base_padding_half"
    android:layout_marginBottom="@dimen/base_padding_half"
    android:paddingBottom="@dimen/base_padding"
    android:orientation="vertical">
    <RelativeLayout
        android:background="@drawable/staff_card_title_bg"
        android:layout_width="match_parent"
        android:layout_height="37dp">

        <TextView
            android:id="@+id/cardTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/total"
            android:textSize="@dimen/card_title_text_size"
            android:textColor="@color/white"
            android:ellipsize="end"
            android:lines="1"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/base_padding"
            android:layout_marginStart="@dimen/base_padding"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_alignParentBottom="true"
            android:background="@color/divider_mid" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/collapseLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/todayHour"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/card_value_text_size"
                android:textColor="@color/text_color_dark"
                android:layout_marginTop="@dimen/base_padding"
                android:gravity="center_horizontal"
                android:maxLines="1"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/today"
                android:textSize="@dimen/card_value_title_text_size"
                android:textColor="@color/text_color_dark"
                android:gravity="center_horizontal" />

        </LinearLayout>

        <View
            android:layout_width="0.5dp"
            android:layout_height="@dimen/card_divider_height"
            android:layout_gravity="top"
            android:layout_marginTop="@dimen/base_padding"
            android:background="@color/divider_mid" />


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">
            <TextView
                android:id="@+id/weekHour"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/card_value_text_size"
                android:textColor="@color/text_color_dark"
                android:gravity="center_horizontal"
                android:layout_marginTop="@dimen/base_padding"
                android:maxLines="1"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/week"
                android:textSize="@dimen/card_value_title_text_size"
                android:textColor="@color/text_color_dark"
                android:gravity="center_horizontal"
                android:maxLines="1"/>
        </LinearLayout>

        <View
            android:layout_width="0.5dp"
            android:layout_height="@dimen/card_divider_height"
            android:layout_gravity="top"
            android:layout_marginTop="@dimen/base_padding"
            android:background="@color/divider_mid" />


        <LinearLayout
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/monthHour"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:gravity="center_horizontal"
                android:textSize="@dimen/card_value_text_size"
                android:textColor="@color/text_color_dark"
                android:layout_marginTop="@dimen/base_padding"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/month"
                android:textSize="@dimen/card_value_title_text_size"
                android:textColor="@color/text_color_dark"
                android:gravity="center_horizontal"
                android:maxLines="1"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>