<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/base_padding_half"
    android:layout_marginEnd="@dimen/base_padding"
    android:layout_marginLeft="@dimen/base_padding"
    android:layout_marginRight="@dimen/base_padding"
    android:layout_marginStart="@dimen/base_padding"
    android:layout_marginTop="@dimen/base_padding_half"
    android:background="@drawable/white_button"
    android:orientation="vertical"
    android:paddingBottom="@dimen/base_padding">

    <RelativeLayout
        android:id="@+id/topHeaderBox"
        android:layout_width="match_parent"
        android:layout_height="37dp"
        android:background="@drawable/top_card_title_bg">

        <TextView
            android:id="@+id/cardTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/base_padding"
            android:layout_marginStart="@dimen/base_padding"
            android:ellipsize="end"
            android:lines="1"
            android:text="@string/your_day_today"
            android:textColor="@color/white"
            android:textSize="@dimen/card_title_text_size" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_alignParentBottom="true"
            android:background="@color/divider_mid" />

    </RelativeLayout>

    <FrameLayout
        android:id="@+id/topLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/expandLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">
            <android.support.v7.widget.RecyclerView
                android:id="@+id/dayItems"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <Button
                android:id="@+id/stopSessionButton"
                android:layout_width="240dp"
                android:layout_height="35dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/red_button"
                android:text="@string/manually_end_activity"
                android:textColor="@color/white"
                android:textSize="@dimen/button_text_size" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/collapseLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/startedHour"
                    android:layout_width="match_parent"
                    android:maxLines="1"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:layout_marginTop="@dimen/base_padding"
                    android:textColor="@color/text_color_dark"
                    android:textSize="@dimen/card_value_text_size" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:maxLines="1"
                    android:text="@string/started"
                    android:textColor="@color/text_color_dark"
                    android:textSize="@dimen/card_value_title_text_size" />

            </LinearLayout>
            <View
                android:layout_width="0.5dp"
                android:layout_height="@dimen/card_divider_height"
                android:layout_gravity="top"
                android:layout_marginTop="@dimen/base_padding"
                android:background="@color/divider_mid" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/workedHour"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:maxLines="1"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/base_padding"
                    android:textColor="@color/text_color_dark"
                    android:textSize="@dimen/card_value_text_size" />

                <TextView
                    android:layout_width="match_parent"
                    android:gravity="center_horizontal"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/worked"
                    android:textColor="@color/text_color_dark"
                    android:textSize="@dimen/card_value_title_text_size" />

            </LinearLayout>

        </LinearLayout>
    </FrameLayout>

</LinearLayout>